# deep-learning-from-scratch

./: .gitignore  deep-learning-from-scratch.cabal  deeplearning-hs.cabal
src/: MNIST.hs  Section_2_3_1.hs  Section_2_3_3.hs  Section_2_5_2.hs  Section_3_4_3.hs  Section_4_5.hs
src/Section_4_5/: TwoLayer.hs
test/: Spec.hs  Spec_2_3_1.hs  Spec_2_3_3.hs  Spec_2_5_2.hs  Spec_3_4_3.hs
