name:                deep-learning-from-scratch
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/lotz84/deep-learning-from-scratch
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Section_2_3_1
                     , Section_2_3_3
                     , Section_2_5_2
                     , Section_3_4_3
                     , Section_4_5
                     , Section_4_5.TwoLayer
                     , MNIST
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , vector
                     , mwc-random
                     , zlib
                     , http-conduit
                     , attoparsec
                     , hmatrix
  default-language:    Haskell2010

test-suite deeplearning-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec_2_3_1
                     , Spec_2_3_3
                     , Spec_2_5_2
                     , Spec_3_4_3
  build-depends:       base
                     , hspec
                     , hmatrix
                     , deeplearning-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/deeplearning-hs
